# Social_network

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  social_network.postman_collection.json
apps/accounts/: serializers.py  urls.py  utils.py  views.py
apps/posts/: models.py  seralizers.py  serializers.py  tests.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py
social_network/: settings.py  urls.py
