[tool.poetry]
name = "social_network"
version = "0.1.0"
description = ""
authors = ["Aleksandr <amvorobei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
django-debug-toolbar = "^3.2.4"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.0.0"
python-dotenv = "^0.19.2"
coreapi = "^2.3.3"
Pygments = "^2.11.2"
Markdown = "^3.3.6"
drf-yasg = "^1.20.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
